--- a/app/views/finance-application-eligibility.html
+++ b/app/views/finance-application-eligibility.html
@@ -18,9 +18,9 @@
         <div class="govuk-grid-column-full">
 
           <span class="govuk-caption-l">Application</span>
-          <h1 class="govuk-heading-xl govuk-!-margin-bottom-2">School capital funding 2023 to 2024</h1>
+          <h1 class="govuk-heading-xl govuk-!-margin-bottom-2">School Beehives Grant</h1>
 
-          <table class="govuk-table govuk-!-margin-bottom-5">
+               <table class="govuk-table govuk-!-margin-bottom-5">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
                 <th scope="col" class="govuk-table__header">Status</th>
@@ -33,8 +33,8 @@
                 <th scope="row" class="govuk-table__header">
                   <strong class="govuk-tag">Processing</strong>
                 </th>
-                <td class="govuk-table__cell">£67,597</td>
-                <td class="govuk-table__cell">SCF-2023-5824</td>
+                <td class="govuk-table__cell">£4,200</td>
+                <td class="govuk-table__cell">BEE-2023-5824</td>
               </tr>
             </tbody>
           </table>
@@ -82,21 +82,20 @@
       <h2 class="govuk-heading-l">Eligibility check</h2>
 
       <div class="govuk-inset-text">
-        <p>Based on the information you have provided and that we already hold, your trust is eligible for the amount of:</p>
-        <p class="govuk-!-font-size-36 govuk-!-font-weight-bold">£67,597</p>
+        <p>Based on the information you have provided and that we already hold, your trust is eligible to apply up to a maximum of:</p>
+        <p class="govuk-!-font-size-36 govuk-!-font-weight-bold">£4,200</p>
       </div>
 
       <h2 class="govuk-heading-l">Information used in this calculation</h2>
 
-      <p>I honestly cannot make head-nor-tail of the <a href="https://assets.publishing.service.gov.uk/media/641c634dba5ac9000cb1a754/2023_to_2024_Condition_funding_methodology.pdf" target="_blank" class="govuk-link">PDF</a> of the methodology for how this figure is calculated.</p>
-
+    
       <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-      Schools in trust
+      Schools size
     </dt>
           <dd class="govuk-summary-list__value">
-      7
+      3 Acres
     </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="#">Criteria</a>
@@ -104,10 +103,10 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-      Pupil weighting
+      Location setting
     </dt>
           <dd class="govuk-summary-list__value">
-      4,653
+      Semi-rural
     </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="#">Criteria</a>
@@ -115,26 +114,16 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-      Location factor
+      Nature assessment
     </dt>
           <dd class="govuk-summary-list__value">
-      0.95
+      Good
     </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="#">Criteria</a>
           </dd>
         </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-      Devolved Formula Capital (DFC)
-    </dt>
-          <dd class="govuk-summary-list__value">
-            <p class="govuk-body">36,321</p>
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">Criteria</a>
-          </dd>
-        </div>
+       
       </dl>
       <h2 class="govuk-heading-l">Confirmation of accuracy</h2>
 
