--- a/app/views/cif-2-a.html
+++ b/app/views/cif-2-a.html
@@ -8,7 +8,7 @@
 {% set view = "tasks" %}
 
 {% block hero %}
-  {% include './_finance_cif_app_header.html'%}
+  {% include './_finance_cif_app_header2a.html'%}
 {% endblock %}
 
 {% block content %}
@@ -67,7 +67,7 @@
 
         <li class="govuk-task-list__item govuk-task-list__item--with-link">
           <div class="govuk-task-list__name-and-hint">
-            <a class="govuk-link govuk-task-list__link" href="/cif-7-a" aria-describedby="app-details-7-status">Declarations</a>
+            <a class="govuk-link govuk-task-list__link" href="/cif-7-b" aria-describedby="app-details-7-status">Declarations</a>
           </div>
           <div class="govuk-task-list__status" id="app-details-7-status">
             <strong class="govuk-tag govuk-tag--blue">
