--- a/app/views/finance-application-approval.html
+++ b/app/views/finance-application-approval.html
@@ -18,9 +18,9 @@
         <div class="govuk-grid-column-full">
 
           <span class="govuk-caption-l">Application</span>
-          <h1 class="govuk-heading-xl govuk-!-margin-bottom-2">School capital funding 2023 to 2024</h1>
+          <h1 class="govuk-heading-xl govuk-!-margin-bottom-2">School Beehives Grant</h1>
 
-          <table class="govuk-table govuk-!-margin-bottom-5">
+           <table class="govuk-table govuk-!-margin-bottom-5">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
                 <th scope="col" class="govuk-table__header">Status</th>
@@ -33,8 +33,8 @@
                 <th scope="row" class="govuk-table__header">
                   <strong class="govuk-tag">Processing</strong>
                 </th>
-                <td class="govuk-table__cell">£67,597</td>
-                <td class="govuk-table__cell">SCF-2023-5824</td>
+                <td class="govuk-table__cell">£4,200</td>
+                <td class="govuk-table__cell">BEE-2023-5824</td>
               </tr>
             </tbody>
           </table>
